@@ -1,3 +1,8 @@
+2000-06-09  Nick Clifton  <nickc@cygnus.com>
+
+	* config/tc-arm.c (cons_fix_new_arm): Assign correct reloc value
+	for size 1 fixes.
+
 2000-06-01  Scott Bambrough <scottb@netwinder.org>
 
 	* config/tc-arm.c (do_mrs): Allow SPSR_BIT to be set correctly.
